# exp_2

./: .gitignore  Agent.md  CLAUDE.md  PROJECT_STRUCTURE.md  TRAINING_DATASET_INFO.md  _quarto.yml  experiment_config.md  log.txt  log_common.txt  pyproject.toml  traffic_comparison_report.md  模型风险等级与代价评估说明.md
argument/: MasterthesisGuide.md  研究思路头脑风暴.qmd
baseline/automix/: README.md  main_automix.py  pyproject.toml
baseline/automix/configs/: automix_test.yaml  automix_train.yaml
baseline/automix/data/example_data/llm_candidates/: llm_config.json
baseline/automix/data/example_data/routing_data/: test_data.jsonl  train_data.jsonl
baseline/automix/src/automix/: __init__.py  data_pipeline.py  methods.py  model.py  router.py  trainer.py
data/: validation_set_1000_eval.jsonl  validation_set_244_eval.jsonl
docs/: argument.qmd  baseline.qmd  comparison_results_analysis.md  index.qmd  references.bib  scheduling_strategies_comparison.md
exp/: .env  TROUBLESHOOTING.md  __init__.py  slm_inference_log.json  todo.md  walkthrough.md
logs/: c1_audit_details.txt  inference_checkpoint31_test.txt  inference_validation_log.txt  qa_audit_report_C1.txt  slm_training_summary.md  trainer_init_sig.txt  training_log.txt  training_log_final.txt  training_log_fixed.txt  training_log_rerun.txt  transformers_version.txt
scripts/: alpha_search.py  analyze_confusion.py  analyze_confusion_matrix.py  avalanche_demo.py  compare_methods.py  convert_validation_set.py  data_config.py  data_config_old.py  data_fix_labels.py  debug_high_only.py  debug_routing.py  debug_simple.py  detailed_cost_breakdown.py  detailed_cost_log.py  expand_data.py  fix_class_labels.py  fix_labels.py  full_300_log_corrected.py  gap_filler.py  generate_300_log.py  (+20 more)
(+129 files in other folders)
