[project]
name = "intention-exp-2"
version = "0.1.0"
description = "Intention Experiment 2 - 实验文档与分析"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    # SLM 蒸馏相关
    "transformers>=4.50.0",
    "datasets>=3.5.0",
    "peft>=0.14.0",
    "torch>=2.6.0",
    "accelerate>=1.3.0",
    "scipy>=1.15.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
docs-preview = "quarto:preview"
docs-build = "quarto:render"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
    "quartodoc>=0.11.1",
]
